Clean up new identity code and feature flags
Ref https://jira.greenpeace.org/browse/PLANET-7193

- Remove planet4_settings_navigation field
- Remove new_identity_styles feature flag
- Remove all the imports of the new_identity_styles stylesheet
- Remove navigation bar partials
- Clean up colors
- Update SVG fill properties
- Update CSS Typography variables
- Clean up OLD css variables
  Keep only the ones that are being used by campaigns
- Change body color
- Update the font family for headings
- Remove the old new identity styles
- Clean up partial selectors
- Add Migrator file which removes all the new_identity and navbar options

--- a/assets/src/blocks/styles/editorStyle.scss
+++ b/assets/src/blocks/styles/editorStyle.scss
@@ -1,6 +1,6 @@
+@import "../../scss/base/tokens";
 @import "../../scss/base/colors";
 @import "../../scss/base/variables";
-@import "../../scss/base/colors";
 @import "../../scss/base/functions";
 @import "../../scss/base/mixins";
 @import "../../scss/base/fonts";
