--- a/assets/src/scss/base/_body.scss
+++ b/assets/src/scss/base/_body.scss
@@ -10,7 +10,7 @@ body {
   overflow-y: hidden;
 
   &.search {
-    font-family: var(--headings--font-family);
+    font-family: var(--font-family-heading);
   }
 
   .mejs-container {
