--- a/assets/src/scss/base/_fonts.scss
+++ b/assets/src/scss/base/_fonts.scss
@@ -1,5 +1,20 @@
-$font-base-size: 16px;
+$bucket: "https://www.greenpeace.org/static/planet4-assets/";
 
+$fonts: (
+  #{$font-family-primary},
+  #{$font-family-secondary},
+  #{$font-family-tertiary},
+);
+
+@each $font in $fonts {
+  @font-face {
+    font-family: #{$font};
+    font-display: swap;
+    src: url(#{$bucket} + #{$font} + ".woff2") format("woff2");
+  }
+}
+
+$font-base-size: 16px;
 $font-size-xxxs: 0.75rem;
 $font-size-xxs: 0.875rem;
 $font-size-xs: 0.9375rem;
