--- a/assets/src/scss/base/_tokens.scss
+++ b/assets/src/scss/base/_tokens.scss
@@ -190,10 +190,10 @@ $color-background-country_list_block: $p4-dark-green-900;
 $color-background-footer: $p4-dark-green-800;
 $color-background-icon--yellow: $p4-action-yellow-700;
 $color-background-link--hover: $gp-green-100;
-$color-background-navigation_bar: $white;
+$color-background-navigation_bar: var(--white);
 $color-background-tag_button--hover: $gp-green-200;
 $color-background-tag_button--passive: $gp-green-100;
-$color-background-take_action_cover_block: $white;
+$color-background-take_action_cover_block: var(--white);
 $color-background-tooltip--error: $red-500;
 $color-border-button--secondary: $p4-dark-green-800;
 $color-border-input: $grey-500;
@@ -205,7 +205,7 @@ $color-text-body: $grey-900;
 $color-text-button--cta: $grey-900;
 $color-text-button--primary: $grey-900;
 $color-text-button--secondary: $p4-dark-green-800;
-$color-text-button-inverse: $white;
+$color-text-button-inverse: var(--white);
 $color-text-heading: $grey-900;
 $color-text-image_caption: $grey-800;
 $color-text-meta_item: $grey-600;
