--- a/assets/src/scss/pages/_page_type.scss
+++ b/assets/src/scss/pages/_page_type.scss
@@ -1,6 +1,6 @@
 .tax-p4-page-type {
   .search-result-list-item {
-    font-family: var(--headings--font-family);
+    font-family: var(--font-family-primary);
   }
 
   .search-result-item-content {
