--- a/assets/src/scss/pages/post/_comments-block.scss
+++ b/assets/src/scss/pages/post/_comments-block.scss
@@ -1,19 +1,23 @@
-.comments-block h3 {
-  font-size: 16px;
-  margin-bottom: 16px;
-}
-
 // Adds nesting on comments
 @include comment-level;
 
-.single-comment {
-  _-- {
-    font-family: var(--headings--font-family);
+.comments-block {
+  h3 {
+    font-size: 16px;
+    margin-bottom: 16px;
   }
+
+  .comment-respond button {
+    height: 48px;
+  }
+}
+
+.single-comment {
+  font-family: var(--font-family-paragraph-secondary);
   padding-bottom: 24px;
 
   &:not(:first-of-type) {
-    border-top: 1px solid transparentize($grey-20, 0.5);
+    border-top: 1px solid rgba($grey-500, 0.5);
     padding-top: 24px;
   }
 }
@@ -26,8 +30,9 @@
 }
 
 .single-comment-meta {
+  font-family: var(--font-family-paragraph-secondary);
   font-size: 14px;
-  color: $grey-40;
+  color: var(--grey-600);
 
   .author-info,
   .comment-date {
@@ -56,9 +61,10 @@
   .single-comment-meta {
     .comment-reply-link {
       _-- {
-        font-family: inherit;
-        font-weight: inherit;
+        font-family: var(--font-family-primary);
+        font-weight: var(--font-weight-regular);
       }
+
       float: right;
       margin-top: 0;
 
