--- a/assets/src/scss/base/_css-variables.scss
+++ b/assets/src/scss/base/_css-variables.scss
@@ -1,17 +1,19 @@
 :root {
+  --body--background-color: var(--white);
   --body--font-family: var(--font-family-secondary);
-  --headings--font-family: var(--font-family-primary);
-  --headings--font-weight: bold;
-  --body--background-color: #{$white};
-  --body--color: #{$grey-80};
-  --link--color: #{$link-color};
-  --link--hover--color: #{$link-color};
-  --link--text-decoration: none;
+  --button--font-family: var(--font-family-button);
+  --button--font-size: var(--font-size-xxxs--font-family-primary);
+  --button--font-weight: var(--font-weight-regular);
+  --button-primary--hover--background: var(--p4-action-yellow-600);
+  --font-family-heading: var(--font-family-primary);
   --link--hover--text-decoration: underline;
-  --link--visited--color: #{$link-color-visited};
-  --navbar-height: 60px;
+  --link--color: var(--grey-900);
+  --link--visited--color: var(--grey-900);
+  --link--hover--color: var(--grey-900);
+  --link--text-decoration: none;
   --navbar-menu-height: 68px;
   --navbar-menu-min-height: 40px;
   --navbar-menu-height--small: 60px;
   --navbar-menu-height--large: 68px;
+  --top-navigation--separation: 1px solid var(--grey-300);
 }
