--- a/assets/src/scss/layout/_breadcrumbs.scss
+++ b/assets/src/scss/layout/_breadcrumbs.scss
@@ -1,7 +1,7 @@
 .top-page-tags {
   _-- {
-    font-family: var(--headings--font-family);
-    font-size: 16px;
+    font-family: var(--font-family-tertiary);
+    font-size: var(--font-size-m--font-family-tertiary);
   }
   margin-bottom: $sp-1;
 
@@ -15,7 +15,7 @@
     pointer-events: none;
     font-weight: 400;
     margin-inline-end: $sp-1;
-    color: var(--top-page-tags--tag-item--color, var(--link--color));
+    color: var(--gp-green-800);
   }
 
   .tag-wrap-bullet {
@@ -24,11 +24,11 @@
 
   .tag-item {
     _-- {
-      color: var(--link--color);
-      font-weight: 500;
+      color: var(--gp-green-800);
+      font-weight: var(--font-weight-semibold);
 
       &:visited {
-        color: var(--link--visited--color);
+        color: var(--gp-green-800);
       }
     }
     display: inline-block;
@@ -48,7 +48,7 @@
     mask-size: contain;
     mask-position: center;
     background-repeat: no-repeat;
-    background-color: var(--top-page-tags--tag-item--color, var(--link--color));
+    background-color: var(--gp-green-800);
     display: inline-block;
   }
 }
