--- a/assets/src/scss/layout/_footer-social-media.scss
+++ b/assets/src/scss/layout/_footer-social-media.scss
@@ -23,7 +23,7 @@
     flex-direction: row;
     flex-wrap: wrap;
     padding-bottom: 9px;
-    border-bottom: 1px solid transparentize($white, .5);
+    border-bottom: 1px solid rgba($white, 0.5);
 
     @include large-and-up {
       border-bottom: none;
@@ -43,7 +43,7 @@
     transition: color 100ms linear;
 
     &:hover {
-      color: transparentize($white, .8);
+      color: rgba($white, 0.8);
     }
   }
 
