--- a/assets/src/scss/layout/_forms.scss
+++ b/assets/src/scss/layout/_forms.scss
@@ -12,16 +12,16 @@
 
     &:not(:disabled) ~ .custom-control-description:hover:before,
     &:not(:disabled) ~ label:hover:before {
-      border-color: var(--body--color);
+      border-color: var(--grey-900);
     }
 
     & ~ .custom-control-description,
     & ~ label {
       --control-label-- {
-        font-family: var(--headings--font-family);
         font-size: $font-size-xxxs;
         line-height: 1rem;
       }
+      font-family: var(--font-family-tertiary);
       position: relative;
       cursor: pointer;
       display: inline-block;
@@ -36,8 +36,8 @@
         content: "";
         width: 20px;
         height: 20px;
-        background: $white;
-        border: 1px solid $grey-20;
+        background: var(--white);
+        border: 1px solid var(--grey-500);
         border-radius: 2px;
         left: 0;
         position: absolute;
@@ -53,15 +53,15 @@
     &:checked ~ .custom-control-description,
     &:checked ~ label {
       &:before {
-        border-color: var(--body--color);
+        border-color: var(--grey-900);
       }
 
       &:after {
         content: "";
         position: absolute;
         transform: rotate(-45deg) scale(-1, 1);
-        border-bottom: 2px solid var(--body--color);
-        border-right: 2px solid var(--body--color);
+        border-bottom: 2px solid var(--grey-900);
+        border-right: 2px solid var(--grey-900);
         top: calc(((100% - 20px) / 2) + 5px);
         left: 4px;
         height: 8px;
@@ -97,16 +97,16 @@
 
     &:not(:disabled) ~ .custom-control-description:hover:before,
     &:not(:disabled) ~ label:hover:before {
-      border-color: var(--body--color);
+      border-color: var(--grey-900);
     }
 
     & ~ .custom-control-description,
     & ~ label {
       _-- {
-        font-family: var(--headings--font-family);
         font-size: $font-size-sm;
         line-height: 1.25rem;
       }
+      font-family: var(--font-family-paragraph-secondary);
       position: relative;
       cursor: pointer;
       padding-inline-start: 36px;
@@ -120,8 +120,8 @@
         content: "";
         width: 20px;
         height: 20px;
-        background: $white;
-        border: 1px solid $grey-20;
+        background: var(--white);
+        border: 1px solid var(--grey-500);
         border-radius: 50%;
         left: 0;
         position: absolute;
@@ -136,9 +136,9 @@
 
     &:checked ~ .custom-control-description:before,
     &:checked ~ label:before {
-      background: var(--body--color);
-      box-shadow: inset 0 0 0 2px $white;
-      border-color: var(--body--color);
+      background: var(--grey-900);
+      box-shadow: inset 0 0 0 2px var(--white);
+      border-color: var(--grey-900);
     }
   }
 }
@@ -153,19 +153,19 @@
 .gfield textarea,
 .ginput_container_multiselect select {
   --form-elements-- {
-    font-family: var(--headings--font-family);
-    font-size: $font-size-sm;
+    font-family: var(--font-family-tertiary);
+    font-size: var(--font-size-m--font-family-tertiary);
   }
   border-radius: 4px;
-  background-color: $white;
-  border: 1px solid $grey-20;
-  color: var(--body--color);
+  background-color: var(--white);
+  border: 1px solid var(--grey-500);
+  color: var(--color-text-body);
   padding: 0 16px;
 
   &::placeholder,
   &::-webkit-input-placeholder,
   &::-ms-input-placeholder {
-    color: $grey-40;
+    color: var(--color-text-body);
   }
 
   &:disabled {
@@ -173,12 +173,12 @@
   }
 
   &:not(:disabled):hover {
-    border-color: $grey-40;
+    border-color: var(--grey-600);
   }
 
   &:focus {
     box-shadow: 0 0 0 2px rgba(0, 109, 253, 0.4);
-    color: var(--body--color);
+    color: var(--color-text-body);
     border-color: transparent;
     outline: 0;
   }
@@ -198,7 +198,7 @@ input[type="email"].form-control {
   }
 
   &:invalid {
-    color: $grey-40;
+    color: var(--grey-600);
   }
 
   option[value=""][disabled] {
@@ -218,16 +218,14 @@ textarea.form-control {
     position: relative;
 
     label {
-      --animated-label-- {
-        font-size: 11px;
-        font-family: var(--headings--font-family);
-        font-weight: 500;
-      }
+      font-size: var(--font-size-xs--font-family-tertiary);
+      font-family: var(--font-family-paragraph-secondary);
+      font-weight: var(--font-weight-regular);
       pointer-events: none;
       position: absolute;
       left: 0;
       top: 16px;
-      color: $grey-40;
+      color: var(--grey-600);
       padding-inline-start: 16px;
       opacity: 0;
       transition: all .3s ease;
@@ -248,12 +246,12 @@ textarea.form-control {
 input,
 select {
   &.is-invalid {
-    border-color: $dark-orange !important;
-    background: $white;
+    border-color: var(--p4-action-yellow-600) !important;
+    background: var(--white);
     background-image: none !important;
 
     &:focus {
-      border-color: $dark-orange;
+      border-color: var(--p4-action-yellow-600);
     }
 
     ~ .invalid-feedback {
@@ -263,11 +261,11 @@ select {
 
   ~ .invalid-feedback {
     --invalid-feedback-- {
-      font-family: var(--headings--font-family);
+      font-family: var(--font-family-primary);
       font-size: 12px;
       font-weight: 500;
     }
-    background: $dark-orange;
+    background: var(--p4-action-yellow-600);
     color: white;
     border-radius: 4px;
     padding: 6px 12px;
@@ -283,7 +281,7 @@ select {
       height: 0;
       width: 0;
       position: absolute;
-      border-bottom-color: $dark-orange;
+      border-bottom-color: var(--p4-action-yellow-600);
       border-width: 5px;
       right: auto;
       left: 16px;
