--- a/assets/src/scss/pages/_page.scss
+++ b/assets/src/scss/pages/_page.scss
@@ -9,6 +9,12 @@
     height: auto;
   }
 
+  p:not(.article-list-item-meta) a,
+  > ul li a,
+  > ol li a {
+    @include shared-link-styles;
+  }
+
   &.no-page-title {
     padding-top: var(--navbar-menu-height--small);
 
@@ -80,7 +86,7 @@
   }
 
   .input-text input {
-    border: 1px solid $grey-20;
+    border: 1px solid var(--color-border-input);
     border-radius: 4px;
     display: inline-block;
     font-size: 16px;
@@ -93,7 +99,7 @@
   }
 
   .input-text input:hover {
-    border: 1px solid $grey-40;
+    border: 1px solid var(--grey-600);
   }
 
   .input-text input:focus {
