--- a/assets/src/scss/pages/_sitemap.scss
+++ b/assets/src/scss/pages/_sitemap.scss
@@ -2,7 +2,7 @@
   margin-bottom: 100px;
 
   a {
-    color: var(--body--color);
+    color: var(--color-text-body);
 
     &:visited,
     &:active,
@@ -16,7 +16,7 @@
   }
 
   h5 {
-    font-family: var(--headings--font-family);
+    font-family: var(--font-family-heading);
     margin-bottom: 1rem;
   }
 
