--- a/assets/src/scss/pages/search/_search-bar.scss
+++ b/assets/src/scss/pages/search/_search-bar.scss
@@ -1,11 +1,9 @@
 .search-bar {
-  _-- {
-    border: 1px solid $dark-blue;
-  }
   width: 100%;
-  background: transparentize($white, .7);
+  background: rgba($white, 0.7);
   padding: 24px 15px;
   border-radius: 4px;
+  border: 1px solid var(--grey-300);
 
   @include small-and-up {
     padding: 32px;
@@ -47,9 +45,7 @@
   }
 
   .clear-search {
-    --clear--search-- {
-      background-color: $black;
-    }
+    background-color: var(--grey-900);
     mask: url("../../images/cross-circle.svg") 50% 50%/24px 24px no-repeat;
     width: 24px;
     position: absolute;
