--- a/templates/search.twig
+++ b/templates/search.twig
@@ -22,9 +22,6 @@
                             <li>{{ __( 'Try searching for somthing else', 'planet4-master-theme' ) }}</li>
                         </ul>
                     {% endif %}
-                    {% if ( corrected_term ) %}
-                        <p class="search-info">{{ __( 'We also included results for ', 'planet4-master-theme' ) }} <span class="btn btn-filter-item">{{ corrected_term }} <i class="icon-cross">{{ 'times'|svgicon }}</i></span></p>
-                    {% endif %}
                 </div>
                 <div class="col-md-12">
                     <div class="search-bar">
@@ -62,10 +59,10 @@
                 <div class="col-lg-4">
                     <div class="filter-sidebar">
                         <div class="filter-button d-lg-none">
-                            <button class="btn btn-filter {{ is_new_identity ? 'btn-secondary' : 'btn-primary' }} {{ disabled }}" data-bs-toggle="modal" data-bs-target="#filtermodal">
+                            <button class="btn btn-filter btn-secondary {{ disabled }}" data-bs-toggle="modal" data-bs-target="#filtermodal">
                                 {{ 'filter'|svgicon }}
-                                 {{ __( 'Filters', 'planet4-master-theme' ) }}
-                             </button>
+                                {{ __( 'Filters', 'planet4-master-theme' ) }}
+                            </button>
                         </div>
                         <div class="modal fade filter-modal" id="filtermodal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
                             <div class="modal-dialog modal-lg" role="document">
@@ -175,7 +172,7 @@
                                             </div>
                                         </div>
                                         <div class="btnact">
-                                            <button type="button" class="btn btn-small {{ is_new_identity ? 'btn-secondary' : 'btn-action cancelbtn' }}" data-bs-dismiss="modal">{{ __( 'Cancel', 'planet4-master-theme' ) }}</button>
+                                            <button type="button" class="btn btn-small btn-secondary" data-bs-dismiss="modal">{{ __( 'Cancel', 'planet4-master-theme' ) }}</button>
                                             <button type="button" class="btn btn-primary btn-small applybtn">{{ __( 'Apply filters', 'planet4-master-theme' ) }}</button>
                                         </div>
                                     </div>
